--- a/DrawbackChess/wwwroot/css/PlayerInfo.css
+++ b/DrawbackChess/wwwroot/css/PlayerInfo.css
@@ -1,10 +1,10 @@
 ﻿.session_info
 {
-    margin-top:0.5rem;
-    margin-bottom:0.5rem;
+    margin-top:0.3rem;
+    margin-bottom:0.3rem;
 }
 
 .options
 {
-    margin-top:1rem;
+    margin-top:0.3rem;
 }
